--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.26",
     "axios": "^1.5.0",
+    "leaflet": "^1.9.4",
+    "leaflet.locatecontrol": "^0.79.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geolocated": "^4.1.2",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
@@ -51,6 +55,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@types/leaflet": "^1.9.6",
     "file-loader": "^6.2.0"
   }
 }
