--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 REACT_APP_BACKEND_URL = http://192.168.15.79:8080
+REACT_APP_CLARIFAI_KEY = 8f6223b070aa4cc6b074d7c2183a712a
+REACT_APP_API_MODEL_ID = aa7f35c01e0642fda5cf400f543e7c40
+REACT_APP_API_ID = SpyCat
+REACT_APP_API_UserId = 3mfhf676kxp2
