--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-geolocated": "^4.1.2",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
