--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.50",
-    "@types/react": "^18.2.21",
+    "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "^7.1.26",
+    "@types/react-redux": "^7.1.31",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "leaflet": "^1.9.4",
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
